Update Docker configuration and add README
- Added docker-compose.yml to .dockerignore and .gitignore.
- Changed Nginx configuration to serve on port 8080 instead of 443.
- Removed SSL certificate generation script from Dockerfile and entrypoint.
- Created README.md with project details, installation instructions, and Docker deployment steps.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,13 +4,9 @@
 # Si no existen, el entrypoint genera certificados autofirmados.
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 8080;
+    listen [::]:8080;
     server_name fas-agent.com _;
-
-    # Certificados SSL (autofirmados por defecto; en producción montar los reales)
-    ssl_certificate     /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
 
     # Recomendaciones SSL
     ssl_protocols TLSv1.2 TLSv1.3;
