Add authentication modal and related functionality for user login and registration
- Introduced AuthModal component for user authentication with login and registration forms.
- Implemented useLogin and useRegister composables for handling authentication logic and form validation.
- Updated TopBar component to include a sign-in button that triggers the authentication modal.
- Enhanced API integration for login and registration processes with error handling.
- Added validation schemas for login and registration forms using Zod.
- Integrated Pinia for state management of authentication modal visibility and mode switching.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 # Optional: set when you have a backend. When unset, contact form shows local success only.
 VITE_API_BASE_URL=
+
+# Google Cloud - build-and-deploy-gc.sh
+REGION=
+REPO=
+SERVICE=
+IMAGE_NAME=
+# TAG opcional; si no se define, se usa fecha-hora (ej: 20250212-143022)
+# TAG=
