--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.2.0",
+    "pinia": "^3.0.4",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.49.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "primevue": "^3.49.0",
-    "primeicons": "^6.0.1",
-    "zod": "^3.23.8",
-    "@vueuse/motion": "^2.2.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
