--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.0",
     "@vueuse/motion": "^2.2.0",
     "pinia": "^3.0.4",
     "primeicons": "^6.0.1",
